GNOME Bugzilla – Bug 703577
Failed download says that it finished
Last modified: 2014-01-07 19:52:24 UTC
Created attachment 248355 [details] [review] Fix failed downloads to disconnect from the finished handler When a download fails it says that it is finished.
Review of attachment 248355 [details] [review]: Looks good, thank yoU!
Attachment 248355 [details] pushed as 297c522 - Fix failed downloads to disconnect from the finished handler