Fix failed downloads to disconnect from the finished handler

Otherwise the finished signal will be called right after the failed
handler and the download's label will be set to finished instead
of the error message.

Signed-off-by: Garrett Regier <garrett@yorba.org>

https://bugzilla.gnome.org/show_bug.cgi?id=703577