lib/widgets/ephy-download-widget.c
@@ -268,12 +268,15 @@ widget_failed_cb (WebKitDownload *download,
 {
   char *error_msg;
 
+  g_signal_handlers_disconnect_by_func (download, widget_finished_cb, widget);
   g_signal_handlers_disconnect_by_func (download, widget_progress_cb, widget);
 
   error_msg = g_strdup_printf (_("Error downloading: %s"), error->message);
   gtk_label_set_text (GTK_LABEL (widget->priv->remaining), error_msg);
   gtk_widget_set_tooltip_text (GTK_WIDGET (widget), error_msg);
   g_free (error_msg);
+
+  totem_glow_button_set_glow (TOTEM_GLOW_BUTTON (widget->priv->button), TRUE);
 }
 
 static void
